fix(slider): all links from start for better showing on mobile devices with screen < 700px

--- a/src/styles/pages/burger/burger-slider.scss
+++ b/src/styles/pages/burger/burger-slider.scss
@@ -11,6 +11,10 @@
   flex-direction: column;
   transform: translateX(100%);
   transition: all 0.5s ease-in-out;
+  @media screen and (max-height: 700px) {
+    justify-content: start;
+    padding-top: 4rem;
+  }
   &__logo {
     background-image: url("/assets/images/logo.jpg");
     background-size: cover;
